--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "berliners",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abhinavshrivastava.github.io/berliners",
+  "homepage": "https://abhinavtech.github.io/berliners",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
