--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "berliners",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "private": true,
+  "homepage": "https://berliners.app",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
